depoloyments_apr23_2023/social-credit/social-credit-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: social-credit # find and replace all "social-credit" with your app name
  name: social-credit
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: social-credit
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: social-credit
    spec:
      containers:
      - image: maximuspowers/social-credit #make sure this matches the docker tag, set it with "docker tag [original tag] maximuspowers/[new tag]" and then "docker push maximuspowers/[new tag]" to put it on hub
        imagePullPolicy: Always
        name: social-credit
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
