depoloyments_apr23_2023/social-credit/social-credit-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: social-credit # dont forget to find and replace
spec:
  selector:
    app: social-credit
  ports:
    - protocol: TCP
      port: 5010 # the port you want to access it on
      targetPort: 5000 # the port that app runs on
  type: LoadBalancer
