depoloyments_apr23_2023/social-credit/social-credit-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: social-credit-svc
spec:
  type: ClusterIP
  selector:
    app: social-credit
  ports:
  - name: http
    port: 5010
    targetPort: 5000
